--- a/packages/site/public/index.html
+++ b/packages/site/public/index.html
@@ -31,7 +31,7 @@
     <section class="section">
       <div class="container">
         <h1 class="title">
-          Hello World
+          区块列表
         </h1>
         <p class="subtitle">
           My first website with <strong>Bulma</strong>!
