Add blocks table

--- a/packages/site/public/index.html
+++ b/packages/site/public/index.html
@@ -23,60 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <title>ChainX Explorer</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <section class="section">
-      <div class="container">
-        <h1 class="title">
-          区块列表
-        </h1>
-        <p class="subtitle">
-          My first website with <strong>Bulma</strong>!
-        </p>
-
-        <a class="button">
-          Button
-        </a>
-
-        <a class="button is-primary">
-          Button
-        </a>
-        <a class="button is-link">
-          Button
-        </a>
-        <a class="button is-info">
-          Button
-        </a>
-        <a class="button is-success">
-          Button
-        </a>
-        <a class="button is-warning">
-          Button
-        </a>
-        <a class="button is-danger">
-          Button
-        </a>
-
-        <div class="line">
-          <a class="button is-small">
-            Button
-          </a>
-          <a class="button">
-            Button
-          </a>
-          <a class="button is-medium">
-            Button
-          </a>
-          <a class="button is-large">
-            Button
-          </a>
-
-        </div>
-      </div>
-    </section>
     <div id="root"></div>
     <!--
       This HTML file is a template.
