Add meta tags to optimize SEO effect

--- a/packages/site/public/index.html
+++ b/packages/site/public/index.html
@@ -14,10 +14,37 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
-    <title>ChainX Explorer</title>
+
+    <!-- Primary Meta Tags -->
+    <title>ChianX Explorer - ChainX 浏览器</title>
+    <meta name="title" content="ChianX Blockchain Explorer - ChainX 区块浏览器">
+    <meta name="description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
+    <meta name="keywords" content="ChainX, blockchain, Explorer, Scan, 浏览器, 区块浏览器, polkadot, cross-chain, crosschain, substrate, asset mining,区块链,跨链,资产跨链, 资产挖矿,bitcoin, BTC, ethereum, ETH, ETC">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="ChainX">
+
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://scan.chainx.org/">
+    <meta property="og:title" content="ChianX Explorer - ChainX 浏览器">
+    <meta property="og:description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
+    <meta property="og:image" content="%PUBLIC_URL%/chainxLogo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://scan.chainx.org/">
+    <meta property="twitter:title" content="ChianX Explorer - ChainX 浏览器">
+    <meta property="twitter:description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/chainxLogo.png">
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>ChainX 区块链浏览器. ChainX BlockChain Explorer.</noscript>
+    </noscript>
     <div id="root">
     </div>
     <!--
