--- a/packages/site/public/index.html
+++ b/packages/site/public/index.html
@@ -15,11 +15,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
 
+    <meta name="baidu-site-verification" content="code-Zk7FVp81oN" />
+
     <!-- Primary Meta Tags -->
-    <title>ChianX Explorer - ChainX 浏览器</title>
-    <meta name="title" content="ChianX Blockchain Explorer - ChainX 区块浏览器">
-    <meta name="description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
-    <meta name="keywords" content="ChainX, blockchain, Explorer, Scan, 浏览器, 区块浏览器, polkadot, cross-chain, crosschain, substrate, asset mining,区块链,跨链,资产跨链, 资产挖矿,bitcoin, BTC, ethereum, ETH, ETC">
+    <title>ChianX Blockchain Explorer</title>
+    <meta name="title" content="ChianX Blockchain Explorer">
+    <meta name="description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
+    <meta name="keywords" content="polkadot,chainx,pcx,blockchain,scan ">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -30,15 +32,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://scan.chainx.org/">
-    <meta property="og:title" content="ChianX Explorer - ChainX 浏览器">
-    <meta property="og:description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
+    <meta property="og:title" content="ChianX Blockchain Explorer">
+    <meta property="og:description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
     <meta property="og:image" content="%PUBLIC_URL%/chainxLogo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://scan.chainx.org/">
-    <meta property="twitter:title" content="ChianX Explorer - ChainX 浏览器">
-    <meta property="twitter:description" content="ChainX, Cross-chain Asset Management Platform. ChainX is one of the earliest projects to launch in the Polkadot ecosystem, is committed to the research and application of Bitcoin Layer 2 expansion, its growth as a digital asset gateway and becoming a Polkadot second-layer relay chain for cross-chain asset exchange. A true pioneer in the development of Bitcoin Cross-DeFi.">
+    <meta property="twitter:title" content="ChianX Blockchain Explorer">
+    <meta property="twitter:description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
     <meta property="twitter:image" content="%PUBLIC_URL%/chainxLogo.png">
   </head>
 
