Fix Typo ChianX
ChianX -> ChainX

--- a/packages/site/public/index.html
+++ b/packages/site/public/index.html
@@ -18,8 +18,8 @@
     <meta name="baidu-site-verification" content="code-Zk7FVp81oN" />
 
     <!-- Primary Meta Tags -->
-    <title>ChianX Blockchain Explorer</title>
-    <meta name="title" content="ChianX Blockchain Explorer">
+    <title>ChainX Blockchain Explorer</title>
+    <meta name="title" content="ChainX Blockchain Explorer">
     <meta name="description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
     <meta name="keywords" content="polkadot,chainx,pcx,blockchain,scan ">
     <meta name="robots" content="index, follow">
@@ -32,14 +32,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://scan.chainx.org/">
-    <meta property="og:title" content="ChianX Blockchain Explorer">
+    <meta property="og:title" content="ChainX Blockchain Explorer">
     <meta property="og:description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
     <meta property="og:image" content="%PUBLIC_URL%/chainxLogo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://scan.chainx.org/">
-    <meta property="twitter:title" content="ChianX Blockchain Explorer">
+    <meta property="twitter:title" content="ChainX Blockchain Explorer">
     <meta property="twitter:description" content="The  blockchain scan explorer built for Substrate based networks and only supports the ChainX network. It can search for various types of blockchain data including PCX and XBTC transactions.">
     <meta property="twitter:image" content="%PUBLIC_URL%/chainxLogo.png">
   </head>
